# signal-desktop-gif

./: README.md  pyproject.toml
src/signal_desktop_gif/: __init__.py  __main__.py
